# Secure-Fault-Tolerant-Audio-and-Document-Meeting-Intelligence

./: .gitignore  README.md  diagnostic_startup.py  import_trace.txt  meeting_bot_architecture.md  patch_platform.py  pyproject.toml  requirements.txt  run_all.bat  run_server.py  server_log.txt  test_supabase.py  test_uvicorn.py  vercel.json
api/: index.py
backend/: app.py
backend/controllers/: audio_chat_controllers.py  chat_controllers.py  document_notes_controllers.py  user_controllers.py
backend/middlewares/: auth_middleware.py
backend/models/: DB_Client.py  SQlite_db.py
backend/routes/: audio_chat_routes.py  chat_routes.py  document_notes_routes.py  user_routes.py
backend/services/: audio_chat_services.py  chat_services.py  document_notes_services.py  user_services.py
backend/utils/: SQlite_utils.py  user_utils.py
brain/7b63ef70-8972-47b0-aab4-cd19148d0bed/scratch/: test_groq_stream.py
frontend/: index.html
frontend/css/: style.css
frontend/html/: chat.html  login.html  meeting.html  signup.html
frontend/js/: auth.js  chat.js  meeting.js
notebook/: main.ipynb  updated_workflow.ipynb
scripts/: migrate_meeting_types.py
src/: logger.py  meeting_state.py  output_parsers.py  utils.py
src/components/: audio_chunker.py  data_transformation.py  document_chat.py  document_parser.py  document_processor.py  meeting_chat.py  meeting_minutes.py
src/prompts/: prompts.py
src/providers/: __init__.py  asr_service.py  health_monitor.py  llm_service.py  provider_manager.py
